8272058: 25 Null pointer dereference defect groups in 4 files

Reviewed-by: gziemski, coleenp, dlong